# fitzroy

./: .gitignore  .terraform.lock.hcl  README.md  cron.tf  deploy.sh  fitzroy.py  iam.tf  lambda.tf  locals.tf  main.tf  providers.tf  pyproject.toml  run.py  run_local.py  sns.tf  variables.tf  vars-example.txt  vars.tf
