[tool.poetry]
name = "fitzroy"
version = "0.1.0"
description = ""
authors = ["Niels Godfredsen <ngodfredsen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
requests = "^2.28.2"
boto3 = "^1.26.123"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
